Added buttons and functionality to go between main screen and schedule screen

--- a/HumdifierApp/app/src/main/res/values/strings.xml
+++ b/HumdifierApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Humidifier</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
