--- a/Main.py.save.1
+++ b/Main.py.save.1
@@ -19,11 +19,11 @@ RELAY_ADDR = 0x6D
 RelOne = 0x01
 RelTwo = 0x02
 RelThree = 0x03
-RelFour = 0x04
-OneStat = 0x05
-TwoStat = 0x06
-ThreeStat = 0x07
-FourStat = 0x08
+RelFour = 0x03
+OneStat = 0x04
+TwoStat = 0x05
+ThreeStat = 0x06
+FourStat = 0x07
 TOG_ALL_OFF = 0x0A
 TOG_ALL_ON = 0x0B
 TOG_ALL = 0x0C
@@ -32,15 +32,14 @@ RELAY_OFF = 0
 RELAY_ON = 15
 
 Device_State = 0
+
 #RH Sensor
 sensor = Adafruit_DHT.DHT22
 pin = 23
-GoalRH = 26
 
 #Variables
 RH = 0
 Temp = 0
-Schedule = 0
 
 #Humidity
 def GetRhTemp():
@@ -67,33 +66,7 @@ def GetWater():
 	temp1 = data >> 8
 	temp2 = (data & 0x0F) << 8
 	newDat = temp1 + temp2
-	return MapWater(newDat)
-
-def MapWater(rawWater):
-	#Constants
-	maxIn = 0x0950
-	minIn = 0x02FF
-	rangeIn = maxIn - minIn
-	maxOut = 100
-	minOut = 25
-	rangeOut = 75
-
-	#Calculations
-	temp = rawWater - minIn
-	if temp < 0:
-		temp = 0
-	temp = temp/rangeIn
-	#print(temp)
-	out = rangeOut * temp
-	#print(out)
-	out = out + minOut
-
-	#Checks
-	if out >= maxOut:
-		return maxOut
-	elif out <= minOut:
-		return minOut
-	return out
+	return newDat
 
 #Relay
 def DeviceOn():
@@ -104,7 +77,6 @@ def DeviceOn():
 		return 1
 	bus.write_byte(RELAY_ADDR, RelOne)
 	time.sleep(0.1)
-	SetPwrLvl()
 	Device_State = 1
 
 def DeviceOff():
@@ -112,79 +84,33 @@ def DeviceOff():
 		global Device_State
 		Device_State = 0
 
-def SetPwrLvl():
+def SetPwrLvl(setting):
 	global Device_State
-	global RH
-	global GoalRH
-	high = 4
-	medium = 3
-	low = 2
-	error = GoalRH - RH
-
-	if error > 15:
-		setting = high
-	elif error > 10:
-		setting = medium
-	else:
-		setting = low
-	
 	relays = CheckRelay()
-	print(relays)
 	if relays[0] == 0:
 		bus.write_byte(RELAY_ADDR, 0x01)
 		time.sleep(0.1)
-		Device_State = 1
-	if relays[setting - 1] == 0:
-		print(setting)
+	if relays[setting -1] == 0:
+	
 		bus.write_byte(RELAY_ADDR, setting)
 		time.sleep(0.1)
+	Device_State = 1
 	return 1
 
 def AllRelayOff():
-	global TOG_ALL_OFF
-	bus.write_byte(RELAY_ADDR, TOG_ALL_OFF)
-	time.sleep(0.1)
-	return 1
+    global TOG_ALL_OFF
+    bus.write_byte(RELAY_ADDR, TOG_ALL_OFF)
+    time.sleep(0.1)
 
 #@return array of 4
 def CheckRelay():
 	ret = [0,0,0,0]
-	ret[0] = bus.read_byte_data(RELAY_ADDR, 0x05)
-	time.sleep(0.01)
-	ret[1] = bus.read_byte_data(RELAY_ADDR, 0x06)
-	time.sleep(0.01)
-	ret[2] = bus.read_byte_data(RELAY_ADDR, 0x07)
-	time.sleep(0.01)
-	ret[3] = bus.read_byte_data(RELAY_ADDR, 0x08)
-	time.sleep(0.01)
+	for x in ret:
+		ret[x] = bus.read_byte_data(RELAY_ADDR, 0x4 + x)
+		time.sleep(0.1)
 	return ret
 
-	#Control
-def CheckSchedule():
-	global GoalRH
-	global RH
-	global Schedule
-	currentDayTime = time.localtime(time.time())
-
-	today = currentDayTime[6]
-	currentHour = currentDayTime[3]
-	currentMinute = currentDayTime[4]
-	z = int(str(currentHour)+str(currentMinute))
-
-	days = ("Monday", "Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday")
-
-	for i in range(len(Schedule[days[today]][0])):
-		startTime = Schedule[days[today]][i]["startTime"]
-		endTime = Schedule[days[today]][i]["endTime"]
-		if z >= startTime and z <= endTime:
-			GetRhTemp()
-			if RH < GoalRH:
-				DeviceOff()
-			else:
-				DeviceOn()
-		else:
-			DeviceOff()
-
+#Control
 def ReadTxt(txt):
 	fileTemp = open(txt,'r')
 	
@@ -220,37 +146,33 @@ def MainLoop():
 	global RH
 	global Temp
 	global Device_State
-	global GoalRH
+	GoalRH = 100
 	Device_State = 0
-	fullTime = 0
-	emptyTime = 0
+	pwrLvl = 0
+	#SetPwrLvl(2)
 	DeviceOff()
 	while True:
-		#Read and handle Server
-
+		#Read Txt and check for new commands
+		print('in Loop')
 		#Read Hardware
+		#CheckRelay()
 		GetRhTemp()
-		water = GetWater()
-		print('Humidity, Temp, Water')
-		print(RH, Temp, water)
-
-		#TODO Work on messy else if
-		if RH < (GoalRH - 5) && Device_State = 0:
-			SetPwrLvl()
-		elif RH > GoalRH:
-			DeviceOff()
-		elif RH < GoalRH && Device_State = 1:
-			setPwrLvl()
 		#Handle
-		#CheckSchedule()
-		if water == 100:
-			fullTime = time.clock_gettime
-		elif water < 25:
-			#notify server
-			emptyTime = time.clock_gettime
-
-		#send data to server
-
+		if RH > GoalRH:
+			print('in if 1')
+			DeviceOff()
+		elif Device_State == 0:
+			print('in if 2')
+			SetPwrLvl(pwrLvl)
+		water = GetWater()
+		if water < 0x02FF:
+			print('Water below 20%')
+		elif water > 0x09B0:
+			print('Water = 100%')
+		print('Humidity, Temp, Water')
+	
+		print(RH, Temp)
+		print("{0:0x}".format(water))
 		time.sleep(2)
 
 MainLoop()
