--- a/Main.py.save.4
+++ b/Main.py.save.4
@@ -201,35 +201,28 @@ def WriteTxt(txt, str):
 	return 1
 
 #Socket.IO event listeners
-#@sio.on('schedule-to-pi')
-#def on_schedule(data):
-#	global Schedule
-#	Schedule = data
+@sio.on('schedule-to-pi')
+def on_schedule(data):
+	global Schedule
+	Schedule = data
 
-#@sio.on('power-status-to-pi')
-#@sio.on('powerStatusToPi')
-@sio.event
-def powerStatusToPi(data):
-	print('inPowerFunc', data)
-	global ManualState
+@sio.on('power-status-to-pi')
+def on_powerStatusHumidity(data):
+	print(data)
 	if data['power'] == 'On':
+		global ManualState
 		print('Message Recieved')
 		SetPwrLvl()
 		ManualState = 1
-	if data['power'] == 'Off':
-                DeviceOff()
-                ManualState = 0
-#def on_powerStatusToPi(data):
+''' Sample way of sending an event to the server
+	sio.emit('waterLevel-from-pi',' some data ')
 
-@sio.event
-def connect():
-	print('Connected To Server')
+'''
 
-###############################################################
+
 def MainLoop():
 	global sio
 	sio.connect('https://polar-meadow-51053.herokuapp.com/')
-
 	#initialize
 	global RH
 	global Temp
@@ -243,6 +236,7 @@ def MainLoop():
 	DeviceOff()
 	while True:
 		#Read Hardware
+		
 		GetRhTemp()
 		water = GetWater()
 		print('Humidity, Temp, Water')
@@ -253,7 +247,7 @@ def MainLoop():
 		
 		if (RH < (GoalRH - 2) and ScheduleState == 1) or Device_State == 1 or ManualState == 1:
 			SetPwrLvl()
-		elif RH > GoalRH or (ManualState == 0 and ScheduleState == 0):
+		elif RH > GoalRH:
 			DeviceOff()
 
 		#Handle
@@ -264,12 +258,7 @@ def MainLoop():
 			emptyTime = time.clock_gettime
 
 		#send data to server
-		jWater = {"WaterLevel": water}
-		jRh = {"Humidity": RH}
-		y = json.dumps(jWater)
-		z = json.dumps(jRh)
-		sio.emit('waterLevel-from-pi',y)
-		sio.emit('humidityLevel-from-pi', z)
+
 		time.sleep(1)
 
 MainLoop()
